cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project (mdckp VERSION 0.1 LANGUAGES CXX)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set (CMAKE_CXX_STANDARD 14)
set (CMAKE_CXX_STANDARD_REQUIRED ON)

set (THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

add_subdirectory(third_party EXCLUDE_FROM_ALL)
add_subdirectory(lib)
add_subdirectory(app)

#set(THIRD_PARTY_INCLUDE_PATH ${THIRD_PARTY_INCLUDE_PATH} PARENT_SCOPE)
#set(TEST_THIRD_PARTY_INCLUDE_PATH ${TEST_THIRD_PARTY_INCLUDE_PATH} PARENT_SCOPE)
#include_directories(${THIRD_PARTY_INCLUDE_PATH})
#
#include_directories(${CMAKE_CURRENT_BINARY_DIR}/lib/)
#include_directories(${LIBRARY_INCLUDE_PATH})
#set(MDCKP_LIBRARY_INCLUDE_PATH "${LIBRARY_INCLUDE_PATH}" PARENT_SCOPE)
#set(MDCKP_LIBRARY_NAME "${LIB_NAME}" PARENT_SCOPE)


enable_testing()

